; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ntb/ntb_hw/extr_ntb_hw_plx.c_ntb_plx_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ntb/ntb_hw/extr_ntb_hw_plx.c_ntb_plx_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ntb_plx_softc = type { i32, i32, i32, %struct.ntb_plx_mw_info* }
%struct.ntb_plx_mw_info = type { i32, i32 }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ntb_plx_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ntb_plx_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ntb_plx_softc*, align 8
  %4 = alloca %struct.ntb_plx_mw_info*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call %struct.ntb_plx_softc* @device_get_softc(i32 %6)
  store %struct.ntb_plx_softc* %7, %struct.ntb_plx_softc** %3, align 8
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @ntb_unregister_device(i32 %8)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @ntb_plx_teardown_intr(i32 %10)
  store i32 0, i32* %5, align 4
  br label %12

12:                                               ; preds = %34, %1
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.ntb_plx_softc*, %struct.ntb_plx_softc** %3, align 8
  %15 = getelementptr inbounds %struct.ntb_plx_softc, %struct.ntb_plx_softc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = icmp slt i32 %13, %16
  br i1 %17, label %18, label %37

18:                                               ; preds = %12
  %19 = load %struct.ntb_plx_softc*, %struct.ntb_plx_softc** %3, align 8
  %20 = getelementptr inbounds %struct.ntb_plx_softc, %struct.ntb_plx_softc* %19, i32 0, i32 3
  %21 = load %struct.ntb_plx_mw_info*, %struct.ntb_plx_mw_info** %20, align 8
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds %struct.ntb_plx_mw_info, %struct.ntb_plx_mw_info* %21, i64 %23
  store %struct.ntb_plx_mw_info* %24, %struct.ntb_plx_mw_info** %4, align 8
  %25 = load i32, i32* %2, align 4
  %26 = load i32, i32* @SYS_RES_MEMORY, align 4
  %27 = load %struct.ntb_plx_mw_info*, %struct.ntb_plx_mw_info** %4, align 8
  %28 = getelementptr inbounds %struct.ntb_plx_mw_info, %struct.ntb_plx_mw_info* %27, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.ntb_plx_mw_info*, %struct.ntb_plx_mw_info** %4, align 8
  %31 = getelementptr inbounds %struct.ntb_plx_mw_info, %struct.ntb_plx_mw_info* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @bus_release_resource(i32 %25, i32 %26, i32 %29, i32 %32)
  br label %34

34:                                               ; preds = %18
  %35 = load i32, i32* %5, align 4
  %36 = add nsw i32 %35, 1
  store i32 %36, i32* %5, align 4
  br label %12

37:                                               ; preds = %12
  %38 = load i32, i32* %2, align 4
  %39 = load i32, i32* @SYS_RES_MEMORY, align 4
  %40 = load %struct.ntb_plx_softc*, %struct.ntb_plx_softc** %3, align 8
  %41 = getelementptr inbounds %struct.ntb_plx_softc, %struct.ntb_plx_softc* %40, i32 0, i32 2
  %42 = load i32, i32* %41, align 8
  %43 = load %struct.ntb_plx_softc*, %struct.ntb_plx_softc** %3, align 8
  %44 = getelementptr inbounds %struct.ntb_plx_softc, %struct.ntb_plx_softc* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @bus_release_resource(i32 %38, i32 %39, i32 %42, i32 %45)
  ret i32 0
}

declare dso_local %struct.ntb_plx_softc* @device_get_softc(i32) #1

declare dso_local i32 @ntb_unregister_device(i32) #1

declare dso_local i32 @ntb_plx_teardown_intr(i32) #1

declare dso_local i32 @bus_release_resource(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
